# zhanfa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.frontend  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.toml
.codex/rules/: default.rules
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 75e8b9fafa7b_init.py  7788177f86a8_add_backtest_time_series_columns.py  a1b2c3d4e5f6_add_backtest_task_id.py
contracts/: openapi.json
developer/: README.md  architecture.md  debug-notes.md  environment.md  platform-ops-role.md  release-checklist.md  testing.md
developer/auto-code-review/: report_full_20260506.md  report_full_20260507.md
developer/reports/: 15min-feasibility.md  choice-api-feasibility.md  tencent-data-reconciliation.md  tencent-data-source-feasibility.md
developer/tickets/: TICKET-001.md  TICKET-002.md  TICKET-003.md  TICKET-004.md  TICKET-005.md  TICKET-006.md  TICKET-007.md  TICKET-008.md  TICKET-009.md  TICKET-010.md  TICKET-011.md  TICKET-012.md  (+56 more)
docs/: architecture.md  automation.md  backtest.md  data.md  frontend.md  index.md  strategy.md
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
notebooks/: 01_quickstart.ipynb  15min_feasibility.py
scripts/: export_jq.py  export_openapi.py  fetch_data.py  fetch_minute.py  reconcile_daily_providers.py  run_backtest.py  run_e2e_backend.py
tests/: conftest.py
(+181 files in other folders)
