[project]
name = "zhanfa"
version = "0.1.0"
description = "自动化投资交易辅助系统 - A股策略回测与验证平台"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.60",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "vectorbt>=0.28.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "arq>=0.26.0",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pandas", "akshare", "vectorbt"]
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "httpx>=0.28.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
